<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnBrazil"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_brazil_description"
        android:onClick="onSelectLanguage"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_brazil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLanguageSelected" />

    <ImageButton
        android:id="@+id/btnUsa"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_usa_description"
        android:onClick="onSelectLanguage"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_usa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBrazil"
        app:layout_constraintTop_toTopOf="@+id/btnBrazil" />

    <ImageButton
        android:id="@+id/btnSpain"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_spain_description"
        android:elevation="10dp"
        android:onClick="onSelectLanguage"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_spain"
        app:layout_constraintEnd_toStartOf="@+id/btnBrazil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBrazil" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_message"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLanguageSelected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_language"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>